complete section footer with only html and css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </picture>
                 <picture>
                     <source media ="(min-width: 900px)" srcset ="./assets/right-desktop.svg">
-                    <img class ="absolute -bottom-50 right-0" src ="./assets/right-mobile.svg" alt ="pattern left">
+                    <img class ="absolute -bottom-[40%] right-0" src ="./assets/right-mobile.svg" alt ="pattern left">
                 </picture>
                 <figcaption class ="w-90 mx-auto text-center">
                     <h1 class ="text-gray text-xl font-display">Humanizing your insurance.</h1>
@@ -57,7 +57,7 @@
                     <button class ="w-52 h-4 border text-white text-xs border-white">VIEW PLANS</button>
                 </figcaption>
             </figure>
-            <section class ="mt-14 mb-10 text-center">
+            <section class ="mt-18 mb-10 text-center">
                 <h2 class ="text-violet-200 text-xl font-display">We're different</h2>
                 <section>
                     <template id ="planTemplate">
@@ -80,6 +80,43 @@
                 </figcaption>
             </figure>
         </main>
+
+        <footer class ="w-90 mx-auto my-8 flex items-center flex-col text-xs text-center">
+            <img src ="./assets/logo.svg" alt ="icon logo">
+            <figure class ="mt-3 mb-6 flex items-center gap-x-0.5">
+                <img src ="./assets/facebook.svg" alt ="icon company">
+                <img src ="./assets/twitter.svg" alt ="icon company">
+                <img src ="./assets/pinterest.svg" alt ="icon company">
+                <img src ="./assets/instagram.svg" alt ="icon company">
+            </figure>
+            <section class ="grid gap-y-3 uppercase font-bold">
+                <ul class ="grid gap-y-1">
+                    <li class ="text-slate-400 font-medium mb-3"><a href="#">our company</a></li>
+                    <li><a href="#">how we work</a></li>
+                    <li><a href="#">why insure?</a></li>
+                    <li><a href="#">check price</a></li>
+                    <li><a href="#">reviews</a></li>
+                </ul>
+                <ul class ="grid gap-y-1">
+                    <li class ="text-slate-400 font-medium mb-3"><a href="#">help me</a></li>
+                    <li><a href="#">terms of use</a></li>
+                    <li><a href="#">privacy policy</a></li>
+                    <li><a href="#">cookies</a></li>
+                </ul>
+                <ul class ="grid gap-y-1">
+                    <li class ="text-slate-400 font-medium mb-3"><a href="#">contact</a></li>
+                    <li><a href="#">sales</a></li>
+                    <li><a href="#">support</a></li>
+                    <li><a href="#">live chat</a></li>
+                </ul>
+                <ul class ="grid gap-y-1">
+                    <li class ="text-slate-400 font-medium mb-3"><a href="#">others</a></li>
+                    <li><a href="#">careers</a></li>
+                    <li><a href="#">press</a></li>
+                    <li><a href="#">licenses</a></li>
+                </ul>
+            </section>
+        </footer>
 
     </body>
 
