complete header section with html, css and javascript

--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
         <header>
             <nav class ="w-90 h-10 mx-auto flex items-center justify-between bg-white">
                 <img src ="./assets/logo.svg" alt ="icon logo">
-                <div class ="w-3.5 h-3.5 flex items-center justify-center relative cursor-pointer border border-black" id ="iconMenu">
+                <div class ="w-3.5 h-3.5 flex items-center justify-center relative cursor-pointer border border-black sm:hidden" id ="iconMenu">
                     <span class ="w-2.5 h-0.2 absolute -translate-y-0.7 bg-black"></span>
                     <span class ="w-2.5 h-0.2 transition-all duration-300 bg-black"></span>
                     <span class ="w-2.5 h-0.2 absolute translate-y-0.7 bg-black "></span>
                 </div>
-                <menu class ="w-full h-menu hidden absolute top-10 left-0 z-10 text-white text-md font-bold uppercase bg-violet-200">
-                    <ul class ="w-90 mx-auto pt-6 flex items-center flex-col gap-y-3.5">
-                        <li><a href ="#">how we work</a></li>
-                        <li><a href ="#">blog</a></li>
-                        <li><a href ="#">account</a></li>
-                        <button class ="w-full max-w-2xl h-4 border-2 border-white">view plans</button>
+                <menu class ="w-full h-menu hidden absolute top-10 left-0 z-10 text-white text-md font-bold uppercase bg-violet-200 sm:w-auto sm:h-10 sm:flex sm:items-center sm:text-violet-100 sm:text-sm sm:relative sm:top-0 sm:bg-transparent">
+                    <ul class ="w-90 mx-auto pt-6 flex items-center flex-col gap-y-3.5 sm:w-auto sm:p-0 sm:flex-row sm:gap-x-3">
+                        <li><a class ="hover:text-violet-200" href ="#">how we work</a></li>
+                        <li><a class ="hover:text-violet-200" href ="#">blog</a></li>
+                        <li><a class ="hover:text-violet-200" href ="#">account</a></li>
+                        <button class ="w-full max-w-2xl h-4 border-2 uppercase border-white sm:w-60 sm:text-violet-200 sm:border-violet-200 hover:text-white hover:bg-violet-200">view plans</button>
                     </ul>
                     <picture>
                         <source media ="(min-width: 900px)" srcset ="./assets/footer-desktop.svg">
-                        <img class ="w-full absolute bottom-0 left-0 rotate-180" src ="./assets/footer-mobile.svg" alt ="pattern">
+                        <img class ="w-full absolute bottom-0 left-0 rotate-180 sm:hidden" src ="./assets/footer-mobile.svg" alt ="pattern">
                     </picture>
                 </menu>
             </nav>
