--- a/index.html
+++ b/index.html
@@ -94,38 +94,40 @@
         </main>
 
         <footer class ="w-90 mx-auto my-8 flex items-center flex-col text-xs text-center">
-            <img src ="./assets/logo.svg" alt ="icon logo">
-            <figure class ="mt-3 mb-6 flex items-center gap-x-0.5">
-                <img src ="./assets/facebook.svg" alt ="icon company">
-                <img src ="./assets/twitter.svg" alt ="icon company">
-                <img src ="./assets/pinterest.svg" alt ="icon company">
-                <img src ="./assets/instagram.svg" alt ="icon company">
-            </figure>
-            <section class ="grid gap-y-3 uppercase font-bold">
+            <section class ="sm:w-full sm:flex sm:items-center sm:justify-between">
+                <img src ="./assets/logo.svg" alt ="icon logo">
+                <figure class ="mt-3 mb-6 flex items-center gap-x-0.5 sm:m-0">
+                    <img src ="./assets/facebook.svg" alt ="icon company">
+                    <img src ="./assets/twitter.svg" alt ="icon company">
+                    <img src ="./assets/pinterest.svg" alt ="icon company">
+                    <img src ="./assets/instagram.svg" alt ="icon company">
+                </figure>
+            </section>
+            <section class ="grid gap-y-3 uppercase font-bold sm:w-full sm:mt-10 sm:grid-cols-4 sm:text-start">
                 <ul class ="grid gap-y-1">
                     <li class ="text-slate-400 font-medium mb-3"><a href="#">our company</a></li>
-                    <li><a href="#">how we work</a></li>
-                    <li><a href="#">why insure?</a></li>
-                    <li><a href="#">check price</a></li>
-                    <li><a href="#">reviews</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">how we work</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">why insure?</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">check price</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">reviews</a></li>
                 </ul>
                 <ul class ="grid gap-y-1">
                     <li class ="text-slate-400 font-medium mb-3"><a href="#">help me</a></li>
-                    <li><a href="#">terms of use</a></li>
-                    <li><a href="#">privacy policy</a></li>
-                    <li><a href="#">cookies</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">terms of use</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">privacy policy</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">cookies</a></li>
                 </ul>
                 <ul class ="grid gap-y-1">
                     <li class ="text-slate-400 font-medium mb-3"><a href="#">contact</a></li>
-                    <li><a href="#">sales</a></li>
-                    <li><a href="#">support</a></li>
-                    <li><a href="#">live chat</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">sales</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">support</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">live chat</a></li>
                 </ul>
                 <ul class ="grid gap-y-1">
                     <li class ="text-slate-400 font-medium mb-3"><a href="#">others</a></li>
-                    <li><a href="#">careers</a></li>
-                    <li><a href="#">press</a></li>
-                    <li><a href="#">licenses</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">careers</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">press</a></li>
+                    <li><a class ="relative after:content-[''] after:w-full after:h-0.2 after:absolute after:bottom-0 after:left-0 after:origin-left after:scale-x-0 after:transition-transform after:duration-500 after:bg-violet-200 hover:after:scale-x-100" href="#">licenses</a></li>
                 </ul>
             </section>
         </footer>
